--- a/index.html
+++ b/index.html
@@ -188,6 +188,10 @@
         <br />
         <br />
 
+        <h2>Area</h2>
+
+        School of Computer Science and Information Systems
+        
         <h2>Course Title</h2>
 
         44-563 Developing Web Apps and Services
